# hermes-hub

./: .dockerignore  .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml
backend/migrations/: 0001_init.sql
backend/src/: app_config.rs  asr.rs  ldap.rs  lib.rs  llm_proxy.rs  main.rs  model_config.rs  model_registry.rs  public_platform.rs  storage.rs  title_generation.rs
backend/src/channel/: events.rs  mod.rs  routes.rs  service.rs
backend/src/db/: migrations.rs  mod.rs  runtime.rs
backend/src/domain/: invite.rs  user.rs
backend/src/hermes/: docker_provisioner.rs  event_streams.rs  health.rs  instance.rs  lifecycle.rs  mod.rs  provisioner.rs  proxy_client.rs
backend/src/http/: admin.rs  api_management.rs  attachments.rs  auth.rs  channel_protocol.rs  hermes_proxy.rs  integrations.rs  invites.rs  ldap.rs  llm_proxy.rs  mod.rs  oauth.rs  oidc.rs  sessions.rs  speech.rs  workspace.rs
backend/src/security/: crypto.rs
backend/src/session/: store.rs
backend/src/skills_fs/: mod.rs
backend/tests/: admin_workspace_test.rs  api_management_test.rs  auth_invites_test.rs  business_oauth_test.rs  channel_home_session_test.rs  channel_message_test.rs  channel_protocol_test.rs  docker_assets_test.rs  docker_provisioner_test.rs  hermes_lifecycle_test.rs  hermes_proxy_test.rs  integration.rs  integration_apps_admin_test.rs  llm_proxy_test.rs  postgres_persistence_test.rs  public_platform_settings_test.rs  schema_test.rs  skills_fs_test.rs  smoke_test.rs  speech_input_test.rs  static_assets_test.rs  title_generation_fallback_test.rs
deploy/: .env.example  compose.dev.yml  compose.prod.yml  compose.yml
deploy/asr/sherpa/: Dockerfile  requirements.txt  server.py
docker/backend/: Dockerfile
docker/hermes/: Dockerfile  hermes-hub-entrypoint.sh  patch_send_message_tool.py
docker/hermes/plugins/hermes_hub_send/: __init__.py  plugin.yaml
docs/superpowers/plans/: 2026-05-19-hermes-hub.md
docs/superpowers/specs/: 2026-05-19-hermes-hub-design.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: auth.spec.ts  workspace.spec.ts
frontend/examples/hermes-hub/: index.html
frontend/public/: manifest.webmanifest  service-worker.js
frontend/src/: app.test.tsx  app.tsx  i18n.tsx  main.tsx  navigation.test.ts  navigation.ts  pwa.ts  service-worker.test.ts  styles.css
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: layout.tsx  session-stream.tsx
frontend/src/examples/hermes-hub/: app.test.tsx  app.tsx  auth-flow.test.ts  auth-flow.ts  chat-runtime.test.ts  chat-runtime.ts  hub-client.test.ts  hub-client.ts  indexeddb-store.test.ts  indexeddb-store.ts  main.test.tsx  main.tsx  protocol.ts  storage.ts  styles.css  tool-registry.ts
frontend/src/routes/: admin.tsx  channel-session.tsx  channels.tsx  login.tsx  personal-settings.tsx  scheduled-tasks.tsx
infra/docker/: backend.Dockerfile  docker-compose.hub.yml  docker-compose.yml
infra/docker/hermes/: Dockerfile  hermes-hub-entrypoint.sh  patch_send_message_tool.py
scripts/: release.sh
