[workspace]
members = ["backend"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
rust-version = "1.82"

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
