[workspace]
members = ["backend"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.88"

[workspace.dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "sync"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
