[package]
name = "hermes-hub-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
argon2 = "0.5"
axum.workspace = true
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
getrandom = "0.3"
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
