[package]
name = "hermes-hub-backend"
version = "0.0.7"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
argon2 = "0.5"
async-trait = "0.1"
axum.workspace = true
base64 = "0.22"
bytes = "1"
chacha20poly1305 = { version = "0.10", features = ["std"] }
futures-util = "0.3"
getrandom = "0.3"
ldap3 = { version = "0.12.1", default-features = false, features = ["tls-rustls-ring"] }
nfsserve = "0.11"
object_store = { version = "0.13", features = ["aws"] }
opendal = { version = "0.56", features = ["services-s3"] }
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http = { version = "0.6", features = ["fs"] }
uuid = { version = "1", features = ["v4"] }
zip = { version = "4", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
tower = { workspace = true, features = ["util"] }
